--- a/EduTune/Assignment/Questions/View/Assignments.storyboard
+++ b/EduTune/Assignment/Questions/View/Assignments.storyboard
@@ -51,7 +51,7 @@
                                         <color key="textColor" name="Grey900"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EO1-Xg-EHG">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EO1-Xg-EHG">
                                         <rect key="frame" x="374" y="12" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="RZ1-6X-Egt"/>
@@ -70,11 +70,11 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="8Pl-FE-3Uf">
                                                 <rect key="frame" x="10" y="10" width="60" height="10"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_chat_light" translatesAutoresizingMaskIntoConstraints="NO" id="oaX-Fw-67m">
-                                                        <rect key="frame" x="0.0" y="0.0" width="21" height="10"/>
+                                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_chat_light" translatesAutoresizingMaskIntoConstraints="NO" id="oaX-Fw-67m">
+                                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="10"/>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20:45" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KSa-BG-nMA">
-                                                        <rect key="frame" x="23" y="0.0" width="37" height="10"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="40:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KSa-BG-nMA">
+                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="10"/>
                                                         <fontDescription key="fontDescription" name="Urbanist-Medium" family="Urbanist" pointSize="14"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
@@ -205,6 +205,7 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="GK8-k4-TQC" id="kil-xX-BzK"/>
+                        <outlet property="nextButton" destination="hZW-6V-CJW" id="Jqa-qG-8z6"/>
                         <outlet property="progressBar" destination="hV9-An-J3k" id="Par-GO-c3i"/>
                         <outlet property="progressCountLabel" destination="SAD-Vt-NZo" id="eYV-YO-YAW"/>
                         <outlet property="reportButton" destination="EO1-Xg-EHG" id="bA9-qX-HER"/>
