--- a/EduTune/MyCourse/MyCourse.storyboard
+++ b/EduTune/MyCourse/MyCourse.storyboard
@@ -559,18 +559,18 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="LessonHeaderCell" id="ajz-H2-ZHP" customClass="LessonHeaderCell" customModule="EduTune" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="55.333332061767578" width="390" height="58.666667938232422"/>
+                                        <rect key="frame" x="0.0" y="55.333332061767578" width="390" height="38"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ajz-H2-ZHP" id="vL3-zq-E3A">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="58.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="38"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="NuT-8Q-b0B">
-                                                    <rect key="frame" x="16" y="10" width="358" height="38.666666666666664"/>
+                                                    <rect key="frame" x="16" y="10" width="358" height="18"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lecture 1: তথ্য ও যোগাযোগ প্রযুক্তি: বিশ্ব ও বাংলাদেশ প্রেক্ষিত" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VaC-qT-CPa">
-                                                            <rect key="frame" x="0.0" y="0.0" width="358" height="38.666666666666664"/>
-                                                            <fontDescription key="fontDescription" name="Urbanist-Medium" family="Urbanist" pointSize="16"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="358" height="18"/>
+                                                            <fontDescription key="fontDescription" name="Urbanist-Medium" family="Urbanist" pointSize="15"/>
                                                             <color key="textColor" name="Grey600"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -589,28 +589,28 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="LessonTVCell" id="qbh-tb-v8a" customClass="LessonTVCell" customModule="EduTune" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="114" width="390" height="85.333335876464844"/>
+                                        <rect key="frame" x="0.0" y="93.333332061767578" width="390" height="83"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qbh-tb-v8a" id="mrg-H5-sef">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="85.333335876464844"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="83"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0TC-j0-a9i">
-                                                    <rect key="frame" x="16" y="0.0" width="358" height="69.333333333333329"/>
+                                                    <rect key="frame" x="16" y="0.0" width="358" height="67"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oi0-FA-Qci">
-                                                            <rect key="frame" x="60" y="13.000000000000004" width="254" height="43.333333333333343"/>
+                                                            <rect key="frame" x="60" y="13" width="260" height="41"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Live: যোগাযোগ প্রযুক্তি: বিশ্ব ও বাংলাদেশ প্রেক্ষিত - পর্ব ১" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5CC-32-C8e">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="216" height="43.333333333333336"/>
-                                                                    <fontDescription key="fontDescription" name="Urbanist-SemiBold" family="Urbanist" pointSize="18"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="204" height="41"/>
+                                                                    <fontDescription key="fontDescription" name="Urbanist-SemiBold" family="Urbanist" pointSize="17"/>
                                                                     <color key="textColor" name="Grey900"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cto-oQ-qEN">
-                                                            <rect key="frame" x="0.0" y="12.666666666666664" width="44" height="44.000000000000007"/>
+                                                            <rect key="frame" x="0.0" y="11.666666666666664" width="44" height="44"/>
                                                             <color key="backgroundColor" name="Blue8"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="44" id="Fmg-8U-P4h"/>
@@ -623,17 +623,23 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xi8-nh-tEP">
-                                                            <rect key="frame" x="0.0" y="24" width="44" height="21.666666666666671"/>
+                                                            <rect key="frame" x="0.0" y="22.666666666666664" width="44" height="21.666666666666664"/>
                                                             <fontDescription key="fontDescription" name="Urbanist-Bold" family="Urbanist" pointSize="18"/>
                                                             <color key="textColor" name="Primary500"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_lock_outlined" translatesAutoresizingMaskIntoConstraints="NO" id="9BD-NA-ngp">
-                                                            <rect key="frame" x="330" y="20.666666666666671" width="28" height="28"/>
+                                                            <rect key="frame" x="336" y="22.666666666666671" width="22" height="22"/>
+                                                            <color key="tintColor" name="Grey700"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="28" id="5AC-S8-li6"/>
-                                                                <constraint firstAttribute="height" constant="28" id="xOp-cB-exn"/>
+                                                                <constraint firstAttribute="width" constant="22" id="5AC-S8-li6"/>
+                                                                <constraint firstAttribute="height" constant="22" id="xOp-cB-exn"/>
                                                             </constraints>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="imageRenderingMode">
+                                                                    <integer key="value" value="2"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
                                                         </imageView>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -651,11 +657,6 @@
                                                         <constraint firstItem="oi0-FA-Qci" firstAttribute="centerY" secondItem="Cto-oQ-qEN" secondAttribute="centerY" id="yEA-z9-HMe"/>
                                                         <constraint firstAttribute="trailing" secondItem="9BD-NA-ngp" secondAttribute="trailing" id="ylv-2e-t9d"/>
                                                     </constraints>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                            <real key="value" value="16"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
                                                 </view>
                                             </subviews>
                                             <constraints>
