--- a/EduTune/Profile/Profile.storyboard
+++ b/EduTune/Profile/Profile.storyboard
@@ -237,6 +237,9 @@
                             <constraint firstItem="eeA-KD-Ilz" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="zjS-B6-pJ9"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backButton" destination="7C0-6b-gFv" id="6VH-dJ-fzH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
